Fix tracklist gradient button text clipping

--- a/src/components/TrackList/TrackList.scss
+++ b/src/components/TrackList/TrackList.scss
@@ -1,9 +1,3 @@
-@import "../../mixins.scss";
-
 .track-list-container {
   padding: 0 4px 64px;
-
-  .add-sounds-button {
-    @include gradientText;
-  }
 }
