--- a/src/components/TrackList/TrackListGroup.scss
+++ b/src/components/TrackList/TrackListGroup.scss
@@ -1,3 +1,5 @@
+@import "../../mixins.scss";
+
 .group-container {
   display: flex;
   flex-direction: column;
@@ -20,7 +22,7 @@
     .name {
       padding: 0 4px;
       font-size: 1rem;
-      letter-spacing: .05rem;
+      letter-spacing: 0.05rem;
       background: var(--background);
     }
   }
@@ -31,5 +33,8 @@
 
   .add-sounds-button {
     align-self: flex-start;
+    span {
+      @include gradientText;
+    }
   }
 }
